<resources>
    <string name="app_name">Good Deeds</string>

    <string name="BACK">BACK</string>
    <string name="OFFER">MyOffer</string>
    <string name="username">MyName</string>

    <string name="create_account">Create Account</string>
    <string name="account_name">Name</string>
    <string name="account_postal_code">Postal Code</string>
    <string name="account_email">Email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_name">Name is invalid</string>
    <string name="password">Password</string>
    <string name="invalid_password">Password is invalid or already used</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_postal_code">Postal code is invalid</string>
    <string name="login_have_no_account">Have no account?</string>
    <string name="login">Login</string>
    <string name="login_error">Wrong email or password or the account does not exist</string>
    <string name="account">Account details</string>
    <string name="edit_account">Edit details</string>
    <string name="account_details">Account details</string>
    <string name="edit_password">Edit password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_offer">New Offer</string>
    <string name="new_offer_subject">Subject</string>
    <string name="new_offer_description">Description</string>
    <string name="invalid_subject">Subject is missing</string>
    <string name="invalid_description">Description is missing</string>
    <string name="deeds">Deeds</string>
    <string name="Market">Market</string>
    <string name="browse_deeds">Browse Deeds</string>
    <string name="log_out">Log out</string>
    <string name="my_active_deeds">My active deeds</string>
    <string name="show_offers">Show offers</string>
    <string name="show_requests">Show requests</string>
    <string name="my_account">My account</string>
    <string name="no_access">Login to be able to access this page</string>
    <string name="my_claimed_deeds">Claimed Deeds</string>
    <string name="show_claimed_deeds">Claimed Deeds</string>
    <string name="show_done_deeds">Done Deeds</string>
    <string name="show_balance">Balance</string>
    <string name="account_balance">Your current Balance:</string>

</resources>
