<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Account"
        android:layout_width="412dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/account_name"
        android:layout_width="412dp"
        android:layout_height="20dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/account_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_name_data"
        android:layout_width="412dp"
        android:layout_height="20dp"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:text="Richard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/account_postal_code"
        android:layout_width="412dp"
        android:layout_height="20dp"
        android:layout_marginTop="367dp"
        android:gravity="center"
        android:text="@string/account_postal_code"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_email"
        android:layout_width="412dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/account_email"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="275dp" />

</androidx.constraintlayout.widget.ConstraintLayout>