<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MyActiveDeeds"
    tools:layout_editor_absoluteY="25dp">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="354dp"
        android:layout_height="465dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tool_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!-- Include other widget or layout tags here. These are considered
                "child views" or "children" of the linear layout -->

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/deedTypeCurrentlyShowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tool_bar" />

    <Button
        android:id="@+id/showOffers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/show_offers"
        android:onClick="showMyActiveOffers"
        app:layout_constraintBottom_toTopOf="@+id/deedTypeCurrentlyShowing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myActiveDeeds" />

    <Button
        android:id="@+id/showRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/show_requests"
        android:onClick="showMyActiveRequests"
        app:layout_constraintBottom_toTopOf="@+id/deedTypeCurrentlyShowing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myActiveDeeds" />

    <TextView
        android:id="@+id/myActiveDeeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_active_deeds"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/deedTypeCurrentlyShowing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tool_bar" />



</androidx.constraintlayout.widget.ConstraintLayout>